# NeedleSteering

./: README.md
TG Victor Reis/: README.md
TG Victor Reis/ustracking/segmentation/: CMakeCache.txt  description.txt
TG Victor Reis/ustracking/segmentation/EnsaioHorizontal/: agulhaSensor_aurora.csv
TG Victor Reis/ustracking/segmentation/EnsaioHorizontal2/: agulhaMet2Met1Met3_im (1).csv  agulhaMet2Met1Met3_im (2).csv  agulhaMet2Met1Met3_im.csv  agulhaSensor_im.csv  output (1).avi  output (2).avi  output (3).avi  outputK.avi
TG Victor Reis/ustracking/segmentation/EnsaioParado/: agulhaMet2Met1_im.csv  agulha_parada.mat
TG_Allan_Fujita/UStepDevice/: .gitignore  README.md
TG_Allan_Fujita/UStepDevice/Matlab_workspace/: .mat  AuroraDriver.m  Correcao.m  CorrecaoBin.m  CorrecaoBin_inicial.m  CurvaturaNova.m  DCCommand.m  DC_Flipping_Results.fig  DesvTeste.m  Identifica_erro.m  List of Matlab functions.txt  Matriz_circulo.mat  PoseMeasurement.m  README.txt  Simulation_DC_Insertion.m  SnapFeedback.m  UStepDeviceHandler.m  analyzeAllDutyCycleExperiment.m  analyzeAllOpenLoopExperiment.m  analyzeOpenLoopExperimentResults.m  aurora_demo.fig  aurora_demo.m  calibrateEMSensorAngle.m  experimentDutyCycle.m  experimentOpenLoopTrajectory.m  experimentStepRepeatability.m  measureNeedleCorrectionAngle.m  measureNeedleCurvature.m  plot_circulo.m  processExperimentResults.m  quaternionTest.m  quatmultiplysym.m  simulateDutyCyclePlanarTrajectory.m  testDutyCycleMotion.m  testGripperFunctions.m  testMotor1Motion.m  testNeedleSpin.m  test_aurora_driver.m  workspace_calibration.mat
device/: description.txt
pathplanning/: CMakeLists.txt  README  description.txt
pathplanning/include/: header.h  planner.h
pathplanning/src/: planner.cpp
tracking/: Cliente.cxx  ProcImagem.cxx  ProcVideo.cxx  description.txt
ustracking/: description.txt
ustracking/segmentation/: CMakeLists.txt
ustracking/segmentation/EnsaioHorizontal/: agulhaMet2Met1_im.csv  agulhaSensor_im.csv  cateter_aurora.csv  mov_horizontal.mat
ustracking/segmentation/EnsaioParado/: agulhaSensor_aurora.csv  cateter_aurora.csv
ustracking/segmentation/EnsaioVertical/: agulhaMet2Met1_im.csv  agulhaSensor_aurora.csv  cateter_aurora.csv  mov_vertical.mat
ustracking/segmentation/MATLAB/: calcAgulhaSensor_im.m  calcErro.m  setup.m
ustracking/segmentation/src/: Cliente.cxx
(+121 files in other folders)
